--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -138,7 +138,7 @@
 .listItemMenuMainHeaderBottom {
     float: left;
     position: relative;
-    margin: 0 20px;
+    margin: 0 14px;
     &.menuLanguageHeaderBottom {
         margin-right: 0;
     }
@@ -195,7 +195,7 @@
         .wrapHeaderBottom {
             background-color: $color8;
             .listItemMenuMainHeaderBottom {
-                margin: 0 20px;
+                margin: 0 14px;
             }
         }
         .wrapLogoHeaderBottom {
@@ -207,31 +207,7 @@
     }
 }
 
-@media (max-width: 1024px) {
-    .wrapMenuMainHeaderBottom {
-        padding-right: 95px;
-    }
-    .listLinkMenuSubHeaderBottom,
-    .listLinkMenuMainHeaderBottom {
-        font-size: 14px;
-    }
-    .listLinkMenuSubHeaderBottom {
-        line-height: 20px;
-    }
-    .listItemMenuMainHeaderBottom {
-        margin: 0 10px;
-    }
-    .wrapLogoHeaderBottom {
-        .imgLogoHeaderBottom {
-            height: 70px;
-        }
-    }
-    .btnBookNowHeaderBottom {
-        padding: 0px 15px;
-    }
-}
-
-@media (max-width: 768px) {
+@media (max-width: 1199px) {
     .wrapLogoHeaderBottom {
         .imgLogoHeaderBottom {
             height: 55px;
@@ -276,7 +252,7 @@
     }
     .listItemMenuMainHeaderBottom {
         width: 100%;
-        margin: 0;
+        margin: 0 !important;
         float: none;
         border-bottom: 1px solid $color13;
         .listLinkMenuMainHeaderBottom {
@@ -402,7 +378,7 @@
     }
 }
 
-@media(max-width:576px) {
+@media(max-width:575px) {
     .fixedMenu {
         .wrapLogoHeaderBottom {
             .imgLogoHeaderBottom {
